Quick fix for double scroll bars on small screens

--- a/_sass/wiki.scss
+++ b/_sass/wiki.scss
@@ -10,6 +10,7 @@ article.page {
 @media (min-width: 64em) {
     .page {
         padding-right: 300px !important;
+        min-height: 1400px; // = sidebar height
     }
 }
 
